--- a/bib/Seminararbeit.bib
+++ b/bib/Seminararbeit.bib
@@ -40,7 +40,7 @@
 }
 
 @online{dr.dr.jornlengsfeldDigitalesInformationszeitalterDr,
-  title = {Digitales {{Informationszeitalter}} – {{Dr}}. {{Dr}}. {{Jörn Lengsfeld}}},
+  title = {Digitales {{Informationszeitalter}}},
   author = {{Dr. Dr. Jörn Lengsfeld}},
   url = {https://joernlengsfeld.com/de/definition/digitales-informationszeitalter/},
   urldate = {2020-08-03},
