--- a/Seminararbeit_RSA.tex
+++ b/Seminararbeit_RSA.tex
@@ -7,7 +7,12 @@
 
 \begin{document}
     \section{Einleitung}
-    Bei der Betrachtung der Benennung der Epochen in der menschlichen Geschichte ist bemerkbar, dass hier mehrmals die bedeutendste technische Errungenschaft aus diesem Zeitraum zur Namensgebung verwendet wird. Das ist natürlich sinnvoll da diese Entwicklungen im großen Ausmaß das Leben der Menschen beeinflussten und auch für den weiteren Verlauf der Geschichte ausschlaggebend sind. Diese Namen sind  wie \enquote{Bronzezeit} recht selbsterklärend, hier wurde die Metallverarbeitung, vor allem mit Bronze erfunden und revolutionierte die Waffentechnik und ermöglichte auch viele andere neuartige Gegenstände.\autocite{BronzezeitEuropaDeutschland} Schwieriger wird es dann schon bei dem Titel unseres Zeitabschnittes: \enquote{Digitales Informationszeitalter}
+    Bei der Betrachtung der Benennung der Epochen in der menschlichen Geschichte ist bemerkbar, dass hier mehrmals die bedeutendste technische Errungenschaft aus diesem Zeitraum zur Namensgebung verwendet wird. Das ist natürlich sinnvoll da diese Entwicklungen im großen Ausmaß das Leben der Menschen beeinflussten und auch für den weiteren Verlauf der Geschichte ausschlaggebend sind. Diese Namen sind  wie \enquote{Bronzezeit} recht selbsterklärend, hier wurde die Metallverarbeitung, vor allem mit Bronze erfunden und revolutionierte die Waffentechnik und ermöglichte auch viele andere neuartige Gegenstände.\autocite{BronzezeitEuropaDeutschland} 
+    Schwieriger wird es dann schon bei dem Titel des aktuellen Zeitabschnittes: \enquote{Digitales Informationszeitalter}. Nach \Citeauthor{dr.dr.jornlengsfeldDigitalesInformationszeitalterDr} sind hierbei die \enquote{Informations- und Kommunikationstechnologien} die prägenden Technologien.\autocite{dr.dr.jornlengsfeldDigitalesInformationszeitalterDr}
+    Diese Technik hat deshalb eine so große Bedeutung in unserem Leben, da sie uns durch das nicht mehr wegzudenkende Internet jederzeit Zugriff auf eine unfassbare Menge an Informationen verschafft. Allerdings werden auch diese Erfindungen leider nicht immer fortschrittsbringend eingesetzt, sondern sie haben genau wie die Erfindungen des Atomzeitalters ihre Schattenseiten, welche meist zwar um einiges unauffälliger sind, aber nicht immer auch ungefährlicher. Denn gerade diese riesige Reichweite macht das Internet so attraktiv für Angreifer und deshalb mussten Verfahren entwickelt werden um sich gegen Verbrecher, die im Hintergrund mitlesen oder schädliche Informationen verbreiten zu schützen. Aus diesem Grund wurden Verschlüsselungsverfahren entwickelt. Bei \enquote{Verschlüsselung} denkt man zwar schnell an Geheimnachrichten und \enquote*{top-secret} Dokumente, allerdings begegnen wir digitalen Verschlüsselungen inzwischen tagtäglich.
+
+    
+    
 
 
 \end{document}
