--- a/bib/Seminararbeit.bib
+++ b/bib/Seminararbeit.bib
@@ -6,14 +6,6 @@
   file = {D\:\\Dokumente\\zotero_bib\\storage\\HLW8LLFE\\authentikation.html}
 }
 
-@article{berlinVerschluesselungsverfahrenRSA,
-  title = {Das Verschlüsselungsverfahren RSA},
-  author = {Berlin, Humboldt-Oberschule and Dietz, Herr},
-  pages = {12},
-  file = {D\:\\Dokumente\\zotero_bib\\storage\\RZCNZB66\\Berlin und Dietz - Das Verschlüsselungsverfahren RSA.pdf},
-  langid = {german}
-}
-
 @online{BronzezeitEuropaDeutschland,
   title = {Bronzezeit in Europa – Deutschland in Geschichte | Schülerlexikon | Lernhelfer},
   url = {https://www.lernhelfer.de/schuelerlexikon/geschichte/artikel/bronzezeit-europa-deutschland},
@@ -24,7 +16,7 @@
   langid = {german}
 }
 
-@book{dankmeierGrundkursCodierungVerschlusselung2006,
+@book{dankmeier2006,
   title = {Grundkurs Codierung: Verschlüsselung, Kompression, Fehlerbeseitigung},
   shorttitle = {Grundkurs Codierung},
   author = {Dankmeier, Wilfried},
@@ -39,7 +31,7 @@
   pagetotal = {393}
 }
 
-@online{dr.dr.jornlengsfeldDigitalesInformationszeitalterDr,
+@online{dr.dr.jornlengsfeld,
   title = {Digitales {{Informationszeitalter}}},
   author = {{Dr. Dr. Jörn Lengsfeld}},
   url = {https://joernlengsfeld.com/de/definition/digitales-informationszeitalter/},
@@ -48,7 +40,7 @@
   keywords = {Einleitung}
 }
 
-@book{ertelAngewandteKryptographieMit2003,
+@book{ertel2003,
   title = {Angewandte Kryptographie: mit 51 Bildern und 30 Aufgaben},
   shorttitle = {Angewandte Kryptographie},
   author = {Ertel, Wolfgang},
@@ -62,7 +54,27 @@
   pagetotal = {221}
 }
 
-@online{sagtVerschlusselungDefinitionZiele2017,
+@article{humbolt-oberschule,
+  title = {Das Verschlüsselungsverfahren RSA},
+  author = {Humbolt-Oberschule and Schweppe, Nora},
+  pages = {12},
+  file = {D\:\\Dokumente\\zotero_bib\\storage\\RZCNZB66\\Berlin und Dietz - Das Verschlüsselungsverfahren RSA.pdf},
+  langid = {german}
+}
+
+@online{mediacompany2017,
+  title = {Was ist HTTPS und eine SSL Verschlüsselung?},
+  author = {, mediacompany},
+  date = {2017-12-06T23:00:00+00:00},
+  journaltitle = {Media Company Düsseldorf Blog - Social Media, SEO,...},
+  url = {https://www.media-company.eu/blog/allgemein/https-und-ssl-verschluesselung/},
+  urldate = {2020-07-30},
+  abstract = {Was bedeutet eigentlich HTTPS und worin liegt der Unterschied zu HTTP? Und warum ist eine SSL Verschlüsselung so wichtig? Hier erfährst Du es!},
+  file = {D\:\\Dokumente\\zotero_bib\\storage\\FWR3C9FJ\\https-und-ssl-verschluesselung.html},
+  langid = {german}
+}
+
+@online{sagt2017,
   title = {Verschlüsselung: Definition, Ziele, Funktionsweise und Verfahren},
   shorttitle = {Verschlüsselung},
   author = {de {sagt}, Sicherheit im Netz?-Notebook-Freunde},
@@ -75,17 +87,6 @@
   langid = {german}
 }
 
-@online{WasIstHTTPS2017,
-  title = {Was ist HTTPS und eine SSL Verschlüsselung?},
-  date = {2017-12-06T23:00:00+00:00},
-  journaltitle = {Media Company Düsseldorf Blog - Social Media, SEO,...},
-  url = {https://www.media-company.eu/blog/allgemein/https-und-ssl-verschluesselung/},
-  urldate = {2020-07-30},
-  abstract = {Was bedeutet eigentlich HTTPS und worin liegt der Unterschied zu HTTP? Und warum ist eine SSL Verschlüsselung so wichtig? Hier erfährst Du es!},
-  file = {D\:\\Dokumente\\zotero_bib\\storage\\FWR3C9FJ\\https-und-ssl-verschluesselung.html},
-  langid = {german}
-}
-
 @online{WasIstVerschluesselung,
   title = {Was ist Verschlüsselung?},
   url = {https://www.security-insider.de/was-ist-verschluesselung-a-618734/},
@@ -95,7 +96,7 @@
   langid = {german}
 }
 
-@book{watjenKryptographieGrundlagenAlgorithmen2008,
+@book{watjen2008,
   title = {Kryptographie: Grundlagen, Algorithmen, Protokolle},
   shorttitle = {Kryptographie},
   author = {Wätjen, Dietmar},
