--- a/bib/Seminararbeit.bib
+++ b/bib/Seminararbeit.bib
@@ -6,6 +6,21 @@
   file = {D\:\\Dokumente\\zotero_bib\\storage\\HLW8LLFE\\authentikation.html}
 }
 
+@book{beutelspacher2015,
+  title = {Moderne Verfahren der Kryptographie: von RSA zu Zero-Knowledge},
+  shorttitle = {Moderne Verfahren der Kryptographie},
+  author = {Beutelspacher, Albrecht and Schwenk, Jörg and Wolfenstetter, Klaus-Dieter},
+  date = {2015},
+  edition = {8., überarbeitete Auflage},
+  publisher = {{Springer Spektrum}},
+  location = {{Wiesbaden}},
+  file = {D\:\\Dokumente\\zotero_bib\\storage\\LFXNMQUE\\Beutelspacher et al. - 2015 - Moderne Verfahren der Kryptographie von RSA zu Ze.pdf},
+  isbn = {978-3-8348-1927-7 978-3-8348-2322-9},
+  langid = {german},
+  pagetotal = {186},
+  series = {Lehrbuch}
+}
+
 @online{BronzezeitEuropaDeutschland,
   title = {Bronzezeit in Europa – Deutschland in Geschichte | Schülerlexikon | Lernhelfer},
   url = {https://www.lernhelfer.de/schuelerlexikon/geschichte/artikel/bronzezeit-europa-deutschland},
