--- a/inc/style.tex
+++ b/inc/style.tex
@@ -7,6 +7,9 @@
 \usepackage[onehalfspacing]{setspace}  % Zeilenabstand auf 1.5 setzen
 \usepackage[hmargin={2.5cm,2.5cm}]{geometry} % Seitenränder wie im Merkblatt vorgeschrieben auf 2,5cm setzen
 
+\usepackage{tabularx}
+\newcolumntype{C}{>{\bfseries\centering\arraybackslash}X}
+
 
 \usepackage{graphicx} % Paket für Einbindung von Bildern
 
