add tableofcontents +basic titlepage closes #1

--- a/Seminararbeit_RSA.tex
+++ b/Seminararbeit_RSA.tex
@@ -7,7 +7,18 @@
 \usepackage[style=reading]{biblatex}
 \bibliography{bib/Seminararbeit}
 
+\title{Seminararbeit}
+\author{Quirin Möller}
+
 \begin{document}
+
+    \pagenumbering{gobble}
+    \maketitle
+    \newpage
+    \tableofcontents
+    \newpage
+    \pagenumbering{arabic}
+
     \section{Einleitung}
     Bei der Betrachtung der Benennung der Epochen in der menschlichen Geschichte ist bemerkbar, dass hier mehrmals die bedeutendste technische Errungenschaft aus diesem Zeitraum zur Namensgebung verwendet wird. Das ist natürlich sinnvoll da diese Entwicklungen im großen Ausmaß das Leben der Menschen beeinflussten und auch für den weiteren Verlauf der Geschichte ausschlaggebend sind. Diese Namen sind  wie \enquote{Bronzezeit} recht selbsterklärend, hier wurde die Metallverarbeitung, vor allem mit Bronze erfunden und revolutionierte die Waffentechnik und ermöglichte auch viele andere neuartige Gegenstände.\autocite{BronzezeitEuropaDeutschland} 
     Schwieriger wird es dann schon bei dem Titel des aktuellen Zeitabschnittes: \enquote{Digitales Informationszeitalter}. Nach \Citeauthor{dr.dr.jornlengsfeld} sind hierbei die \enquote{Informations- und Kommunikationstechnologien} die prägenden Technologien.\autocite{dr.dr.jornlengsfeld}
