add bibliography closes #2

--- a/bib/Seminararbeit.bib
+++ b/bib/Seminararbeit.bib
@@ -3,7 +3,6 @@
   title = {Authentikation},
   url = {https://www2.wi.fh-flensburg.de/rechnernetze/glossar/Remote_Access/authentikation.htm},
   urldate = {2020-07-30},
-  file = {D\:\\Dokumente\\zotero_bib\\storage\\HLW8LLFE\\authentikation.html}
 }
 
 @book{beutelspacher2015,
@@ -14,20 +13,14 @@
   edition = {8., überarbeitete Auflage},
   publisher = {{Springer Spektrum}},
   location = {{Wiesbaden}},
-  file = {D\:\\Dokumente\\zotero_bib\\storage\\LFXNMQUE\\Beutelspacher et al. - 2015 - Moderne Verfahren der Kryptographie von RSA zu Ze.pdf},
   isbn = {978-3-8348-1927-7 978-3-8348-2322-9},
   langid = {german},
-  pagetotal = {186},
-  series = {Lehrbuch}
 }
 
 @online{BronzezeitEuropaDeutschland,
-  title = {Bronzezeit in Europa – Deutschland in Geschichte | Schülerlexikon | Lernhelfer},
+  title = {Bronzezeit in Europa},
   url = {https://www.lernhelfer.de/schuelerlexikon/geschichte/artikel/bronzezeit-europa-deutschland},
   urldate = {2020-08-03},
-  abstract = {Als Bronzezeit wird die Epoche bezeichnet, die zwischen der Kupfer- und Eisenzeit der Vor- und Frühgeschichte liegt. Sie begann in Mitteleuropa etwa um 1800/1700 v. Chr. und währte bis 800/700 v. Chr. In dieser Zeit war das Metall Bronze der wichtigste Werkstoff und diente u. a. zur Herstellung von Werkzeugen, Waffen und Schmuck. Zu den Funden aus der Bronzezeit gehören},
-  file = {D\:\\Dokumente\\zotero_bib\\storage\\84LP2496\\bronzezeit-europa-deutschland.html},
-  keywords = {Einleitung},
   langid = {german}
 }
 
@@ -40,19 +33,15 @@
   publisher = {{Vieweg}},
   location = {{Wiesbaden}},
   abstract = {Verschlüsseln (mit DES, AES, RSA, elektronische Unterschrift, Berechtigungsprotokolle, Pseudo-Primzahlen, Hash-Summen) - Kompression (mit Huffman, LZW, JPEG, MPEG, MP3, Wavelets, Fraktalen) - Ein- und Mehrbit-Fehlerkorrektur (mit Hamming-, BCH-, Reed-Solomon-,Turboprodukt-Codes, Shannons Kanalkapazität) - Aussagekräftige Beispiele und Aufgaben, die das Lernen effektiv unterstützen},
-  file = {D\:\\Dokumente\\zotero_bib\\storage\\8LDF4THL\\Dankmeier - 2006 - Grundkurs Codierung Verschlüsselung, Kompression,.pdf},
   isbn = {978-3-528-25399-8},
   langid = {german},
-  pagetotal = {393}
 }
 
-@online{dr.dr.jornlengsfeld,
+@online{jornlengsfeld,
   title = {Digitales {{Informationszeitalter}}},
-  author = {{Dr. Dr. Jörn Lengsfeld}},
+  author = {{Jörn Lengsfeld}},
   url = {https://joernlengsfeld.com/de/definition/digitales-informationszeitalter/},
   urldate = {2020-08-03},
-  file = {D\:\\Dokumente\\zotero_bib\\storage\\KM42RA54\\digitales-informationszeitalter.html},
-  keywords = {Einleitung}
 }
 
 @book{ertel2003,
@@ -63,17 +52,14 @@
   edition = {2., bearb. Aufl},
   publisher = {{Fachbuchverl. Leipzig im Carl Hanser Verl}},
   location = {{München}},
-  file = {D\:\\Dokumente\\zotero_bib\\storage\\XUBSU6JA\\Ertel - 2003 - Angewandte Kryptographie mit 51 Bildern und 30 Au.pdf},
   isbn = {978-3-446-22304-2},
   langid = {german},
-  pagetotal = {221}
 }
 
 @article{humbolt-oberschule,
   title = {Das Verschlüsselungsverfahren RSA},
   author = {Humbolt-Oberschule and Schweppe, Nora},
   pages = {12},
-  file = {D\:\\Dokumente\\zotero_bib\\storage\\RZCNZB66\\Berlin und Dietz - Das Verschlüsselungsverfahren RSA.pdf},
   langid = {german}
 }
 
@@ -85,7 +71,6 @@
   url = {https://www.media-company.eu/blog/allgemein/https-und-ssl-verschluesselung/},
   urldate = {2020-07-30},
   abstract = {Was bedeutet eigentlich HTTPS und worin liegt der Unterschied zu HTTP? Und warum ist eine SSL Verschlüsselung so wichtig? Hier erfährst Du es!},
-  file = {D\:\\Dokumente\\zotero_bib\\storage\\FWR3C9FJ\\https-und-ssl-verschluesselung.html},
   langid = {german}
 }
 
@@ -98,7 +83,6 @@
   url = {http://www.was-ist-malware.de/it-sicherheit/verschluesselung-definition-ziele-funktionsweise-und-verfahren/},
   urldate = {2020-07-30},
   abstract = {Bei einer Verschlüsselung werden Daten in eine unlesbare Form überführt. Inhalt: Ziele, Funktoinsweise und verschiedene Verfahren der Verschlüsselung.},
-  file = {D\:\\Dokumente\\zotero_bib\\storage\\SZZXGEK4\\verschluesselung-definition-ziele-funktionsweise-und-verfahren.html},
   langid = {german}
 }
 
@@ -107,7 +91,6 @@
   url = {https://www.security-insider.de/was-ist-verschluesselung-a-618734/},
   urldate = {2020-07-30},
   abstract = {Mit Hilfe der Verschlüsselung lassen sich Daten in eine für Unbefugte nicht mehr lesbare Form verwandeln. Zur Verschlüsselung kommen digitale Schlüssel (Schlüsseldateien) in symmetrischen oder asymmetrischen Verschlüsselungsverfahren zum Einsatz.},
-  file = {D\:\\Dokumente\\zotero_bib\\storage\\ZU8X8ZE9\\was-ist-verschluesselung-a-618734.html},
   langid = {german}
 }
 
@@ -119,10 +102,8 @@
   edition = {2. Aufl},
   publisher = {{Spektrum, Akad. Verl}},
   location = {{Heidelberg}},
-  file = {D\:\\Dokumente\\zotero_bib\\storage\\QNUE8Y5X\\Wätjen - 2008 - Kryptographie Grundlagen, Algorithmen, Protokolle.pdf},
   isbn = {978-3-8274-1916-3},
   langid = {german},
-  pagetotal = {343}
 }
 
 
