--- a/bib/Seminararbeit.bib
+++ b/bib/Seminararbeit.bib
@@ -32,7 +32,6 @@
   edition = {3., überarb. und erw. Aufl},
   publisher = {{Vieweg}},
   location = {{Wiesbaden}},
-  abstract = {Verschlüsseln (mit DES, AES, RSA, elektronische Unterschrift, Berechtigungsprotokolle, Pseudo-Primzahlen, Hash-Summen) - Kompression (mit Huffman, LZW, JPEG, MPEG, MP3, Wavelets, Fraktalen) - Ein- und Mehrbit-Fehlerkorrektur (mit Hamming-, BCH-, Reed-Solomon-,Turboprodukt-Codes, Shannons Kanalkapazität) - Aussagekräftige Beispiele und Aufgaben, die das Lernen effektiv unterstützen},
   isbn = {978-3-528-25399-8},
   langid = {german},
 }
@@ -56,16 +55,9 @@
   langid = {german},
 }
 
-@article{humbolt-oberschule,
-  title = {Das Verschlüsselungsverfahren RSA},
-  author = {Humbolt-Oberschule and Schweppe, Nora},
-  pages = {12},
-  langid = {german}
-}
-
 @online{mediacompany2017,
   title = {Was ist HTTPS und eine SSL Verschlüsselung?},
-  author = {, mediacompany},
+  author = {Rödiger, Jana},
   date = {2017-12-06T23:00:00+00:00},
   journaltitle = {Media Company Düsseldorf Blog - Social Media, SEO,...},
   url = {https://www.media-company.eu/blog/allgemein/https-und-ssl-verschluesselung/},
@@ -77,7 +69,7 @@
 @online{sagt2017,
   title = {Verschlüsselung: Definition, Ziele, Funktionsweise und Verfahren},
   shorttitle = {Verschlüsselung},
-  author = {de {sagt}, Sicherheit im Netz?-Notebook-Freunde},
+  author = {Lauterschlag, Enrico},
   date = {2017-12-15T09:00:50+01:00},
   journaltitle = {Was ist Malware?},
   url = {http://www.was-ist-malware.de/it-sicherheit/verschluesselung-definition-ziele-funktionsweise-und-verfahren/},
@@ -88,6 +80,7 @@
 
 @online{WasIstVerschluesselung,
   title = {Was ist Verschlüsselung?},
+  author = {Luber, Stefan},
   url = {https://www.security-insider.de/was-ist-verschluesselung-a-618734/},
   urldate = {2020-07-30},
   abstract = {Mit Hilfe der Verschlüsselung lassen sich Daten in eine für Unbefugte nicht mehr lesbare Form verwandeln. Zur Verschlüsselung kommen digitale Schlüssel (Schlüsseldateien) in symmetrischen oder asymmetrischen Verschlüsselungsverfahren zum Einsatz.},
