--- a/inc/style.tex
+++ b/inc/style.tex
@@ -6,6 +6,8 @@
 \usepackage[T1]{fontenc}    % westeuropäisches font-encoding für schonere fonts
 \usepackage[onehalfspacing]{setspace}  % Zeilenabstand auf 1.5 setzen
 \usepackage[hmargin={2.5cm,2.5cm}]{geometry} % Seitenränder wie im Merkblatt vorgeschrieben auf 2,5cm setzen
+% \usepackage{microtype}
+\usepackage{amsmath}
 
 \usepackage{tabularx}
 \newcolumntype{C}{>{\bfseries\centering\arraybackslash}X}
