--- a/inc/style.tex
+++ b/inc/style.tex
@@ -34,3 +34,7 @@
 \addtokomafont{section}{\rmfamily}
 \addtokomafont{subsection}{\rmfamily}
 \addtokomafont{subsubsection}{\rmfamily}
+
+% Grafikzeugs
+\usepackage{tikz}
+\usetikzlibrary{shapes.geometric, arrows, positioning, automata}
